[project]
name = "eodhp-accounting-cloudfront"
dynamic = ["version"]
description = "Data transfer accounting events for transfers from workspace stores"
readme = "README.md"

requires-python = ">=3.13,<3.14"

license = {file = "LICENSE"}

authors = [
  {name = "Telespazio UK Ltd", email = "alex.hayward@telespazio.com" }
]

maintainers = [
  {name = "Telespazio UK Ltd", email = "shahid.raza@telespazio.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "boto3",
  "pulsar-client",
  "click",
  "pysubnettree",
  "requests",
  "eodhp-utils",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/eodhp-data-transfer-events"
changelog = "https://github.com/EO-DataHub/eodhp-data-transfer-events/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-watcher",
    "pytest-xdist",
    "ruff",
    "validate-pyproject",
    "httpx",
    "moto",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["billing_scanner"]

[tool.uv]
package = true

[tool.uv.sources]
eodhp-utils = { git = "https://github.com/UKEODHP/eodhp-utils", tag = "v0.1.9" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008"    # function call in default argument (incompatible with FastAPI)
]

[tool.pyright]
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportOperatorIssue = "warning"
reportReturnType = "warning"
